added person validator
